# BD_Atera_AutoCompare

./: .env.example  .gitignore  BD_Atera_AutoCompare.spec  README.md  pyproject.toml  run_autocompare.py
Docs/: AGENTS.md  ATERA_CSV_EXPORT_IMPLEMENTATION_PLAN.md  BD_CSV_PREPARE_IMPLEMENTATION_PLAN.md  CSV_COMPARE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md
archive/implementation_reference/: bd_atera_compare.py
archive/implementation_reference/tests/: test_bd_atera_compare.py
src/bd_atera_autocompare/: __init__.py  app.py  atera_api.py  atera_export.py  atera_mapping.py  atera_schema.py  cli.py  csv_io.py  env_file.py  normalization.py  pipeline.py
src/bd_atera_autocompare/atera/: __init__.py  api.py  export.py  mapping.py  schema.py
src/bd_atera_autocompare/bd/: __init__.py  api.py  mapping.py  prepare.py  schema.py
src/bd_atera_autocompare/compare/: __init__.py
tests/: test_app.py  test_atera_export.py  test_bd_prepare.py  test_cli.py  test_compare.py  test_pipeline.py
