[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bd-atera-autocompare"
version = "0.1.0"
description = "Normalize Atera and Bitdefender endpoint CSV data for comparison."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6",
]

[project.scripts]
atera-export = "bd_atera_autocompare.atera.export:main"
bd-prepare = "bd_atera_autocompare.bd.prepare:main"
compare = "bd_atera_autocompare.compare:main"
bd-atera-autocompare = "bd_atera_autocompare.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
